@startuml
'https://plantuml.com/sequence-diagram

package "Shape" {
interface IShape
abstract class AbstractShape
class Oval
class Rectangle
}

package "Model" {
interface IShapeModel
class ShapeModel
class Snapshot
}

IShape <-- AbstractShape
AbstractShape <- Rectangle
AbstractShape <- Oval


IShapeModel <-- ShapeModel
ShapeModel *-- IShape

abstract class AbstractShape {
- name
- x
- y
- r
- g
- b
- sizeOne
- sizeTwo
+ setLocation
+ setSize
+ setName
+ getX
+ getY
+ getSizeOne
+ getSizeTwo
+ getRed
+ getGreen
+ getBlue
}

class Oval {
+ getType
+ toString
}

class Rectangle {
+ getType
+ toString
}

interface IShapeModel {
+ createShape
+ moveShape
+ resizeShape
+ recolorShape
+ removeShape
+ getAlbum
+ getSelfie
+ takeSelfie
+ getSnapshotList
+ printSnapshotIds
+ getSnapshot
+ getSnapshotDetails
+ resetAlbum
}

interface IShape {
+ setLocation
+ setSize
+ setColor
+ getName
+ getX
+ getY
+ getSizeOne
+ getSizeTwo
+ getRed
+ getGreen
+ getBlue
}

class ShapeModel {
- album
- selfie
+ createShape
+ isValidForChange
+ moveShape
+ resizeShape
+ recolorShape
+ removeShape
+ getAlbum
+ getSelfie
+ takeSelfie
+ getSnapshotList
+ printSnapshotIds
+ getSnapshot
+ getSnapshotDetails
+ resetAlbum
}

class Snapshot {
- historyList
- historyDetails
- startTime
- idFormat
- timestampFormat
+ takeSnapshot
+ getSnapshot
+ getHistoryList
+ getHistoryDetails
+ reset
}

@enduml